syntax = "proto3";

package ud;
option go_package="pb/ud";

message WithID {
  int64 id = 1;
}
message Empty{
}

message PageInfo{
  int64 page = 1;
  int64 size = 2;
}
message TimeRange{
  int64 start = 1;
  int64 end = 2;
}
message DeviceCore{
  string   productID = 1; //产品id
  string  deviceName = 2; //设备名称
}


//规则控制
service rule {
  //场景
  rpc sceneInfoCreate(SceneInfo) returns(WithID);
  rpc sceneInfoUpdate(SceneInfo) returns(Empty);
  rpc sceneInfoDelete(WithID) returns(Empty);
  rpc sceneInfoIndex(SceneInfoIndexReq) returns(SceneInfoIndexResp);
  rpc sceneInfoRead(WithID) returns(SceneInfo);
  rpc sceneManuallyTrigger(WithID) returns (Empty);//手动触发场景


}




message SceneInfoIndexReq{
  PageInfo page = 1;//分页信息 只获取一个则不填
  int64 areaID = 6;//所属区域
  string tag =7;//标签 admin: 管理员 normal: 普通
  string name =2;//场景名 模糊查询
  int64 status = 3;//状态: 1启用 2禁用
  string type = 4;//auto:自动化 manual:手动触发
  int64 alarmID = 5;//告警配置ID过滤
  string deviceMode =10;//设备模式 single:单设备 multi:多设备
  string   productID = 8; //产品id
  string  deviceName = 9; //设备名称
}

message SceneInfoIndexResp{
  repeated SceneInfo list = 1;//设备信息
  int64  total = 2;//总数(只有分页的时候会返回)
}

message SceneFlowInfo{
  string type =1;//if then
  string subType =2;//timer:定时触发 notify: 通知 delay:延迟  device:设备输出或设备触发
  string info =3;//内容
}

message SceneInfo{
  int64 id = 1;//场景id
  string name =3;//场景名
  string desc = 4;//描述
  int64 areaID =21;//区域id
  repeated SceneFlowInfo FlowPath =15; //执行的流程
  string tag =12;//标签 admin: 管理员 normal: 普通
  int64 createdTime = 5;//创建时间 秒级时间戳 只读
  string type = 14;//auto:自动化 manual:手动触发
  string if = 6;//多种触发方式
  string when = 7;//手动触发模式不生效
  string then = 8; //触发后执行的动作
  int64 status = 9;// 状态（1启用 2禁用）
  string headImg = 10;
  bool isUpdateHeadImg = 11;//只有这个参数为true的时候才会更新图片,传参为图片的file path
  int64 lastRunTime = 13;//最后一次执行时间 秒级时间戳 只读
  string   productID = 16; //产品id
  string  deviceName = 17; //设备名称
  string deviceAlias =18;//设备别名(只读)
  string deviceMode =19;//设备模式 single:单设备 multi:多设备
  string body =20;//自定义字段
}

